# agno_fastomop

./: .dockerignore  .env.docker  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Modelfile.medgemma-tools  README.md  config.toml  deploy.sh  docker-compose.yml  manage.sh  prek.toml  pyproject.toml  zensical.toml
.github/workflows/: ci.yml
docs/: imaging-team-image-fetch-analysis.md  index.md
src/agno_fastomop/: _logging.py  bootstrap.py  cli.py  config.py  run_agent.py  web_interface.py
src/agno_fastomop/agents/: database.py  factory.py  imaging.py  semantic.py  supervisor.py
src/agno_fastomop/evaluation/: experiments.py
src/agno_fastomop/knowledge/omop_world_model/: critical_sql_patterns.md
src/agno_fastomop/models/: __init__.py  medgemma_ollama.py
src/agno_fastomop/observability/: trace_context.py  tracer.py
src/agno_fastomop/prompts/: ards_classifier.txt  database_agent.txt  imaging_agent.txt  semantic_agent_fastomop.txt  supervisor.txt
src/agno_fastomop/schemas/: schemas.py
src/agno_fastomop/tools/: ards_classifier.py  hpc_image.py
src/agno_fastomop/workflows/: clinical_imaging_pipeline.py  imaging_workflow.py  omop_workflow.py
tests/: conftest.py  test_database_agent.py  test_database_agent_verbose.py  test_mcp_direct.py  test_mcp_manual_lifecycle.py  test_mcp_patients.py  test_medgemma_tool_calling.py  test_omcp_connection.py  test_omop_queries.json  test_semantic_agent.py  test_workflow_handoff.py
tests/unit/: test_config.py
